--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect ./index.js",
+    "start": "nodemon --inspect src/index.js",
+    "scss": "sass src/resources/scss/app.scss src/public/css/app.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +35,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "express-handlebars": "^7.0.6",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.0"
   }
 }
