--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
+    "beautifull": "lint-staged",
     "scss": "sass src/resources/scss/app.scss src/public/css/app.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,14 +31,20 @@
   "bugs": {
     "url": "https://github.com/thong24506/node_blog/issues"
   },
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
   "homepage": "https://github.com/thong24506/node_blog#readme",
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
     "express-handlebars": "^7.0.6",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "sass": "^1.62.0"
   }
 }
