--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
+  "husky": {
+    "hook": {
+      "pre-commit": "npm run lint-staged"
+    }
+  },
   "homepage": "https://github.com/thong24506/node_blog#readme",
   "dependencies": {
     "express": "^4.18.2"
